--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^20.11.25",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -32,6 +34,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^5.1.4"
   }
 }
